assets/styles/main.scss
@use "@picocss/pico/scss/pico";

* {
	font-family: "SF Mono", ui-monospace, monospace;
}

body {
	min-height: 100vh;
	display: flex;
	flex-direction: column;
}

main {
	margin-bottom: auto;
}

footer {
	text-align: center;
}

nav {
	flex-direction: row;
}

.icon {
	fill: currentColor;
}

details .dropdown > ul {
	max-height: 512px;
}

.visualization-grid {
	display: grid;
	grid-template-columns: 1fr 2fr;
}

.nomargin {
	margin: 0 !important;
}

.chart {
	display: block;
	width: 100%;
	height: 100%;
	aspect-ratio: 1 / 1;
}

@media (max-width: 256px) {
	nav {
		flex-direction: column;
	}
}

